// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list of repairs with content for a manager 1`] = `
<glamorous.Div
  backgroundColor="rgba(255,255,255,.7)"
  height="100%"
>
  <div>
    <div>
      <button
        onClick={[Function]}
      >
        Add repair
      </button>
    </div>
    <div>
      <RepairRow
        repair={
          Object {
            "id": 1,
            "title": "Test repair 1",
          }
        }
      />
      <RepairRow
        repair={
          Object {
            "id": 1,
            "title": "Test repair 1",
          }
        }
      />
    </div>
  </div>
</glamorous.Div>
`;

exports[`renders a list of repairs with content for a regular user 1`] = `
<glamorous.Div
  backgroundColor="rgba(255,255,255,.7)"
  height="100%"
>
  <div>
    <div>
      <RepairRow
        repair={
          Object {
            "id": 1,
            "title": "Test repair 1",
          }
        }
      />
      <RepairRow
        repair={
          Object {
            "id": 1,
            "title": "Test repair 1",
          }
        }
      />
    </div>
  </div>
</glamorous.Div>
`;

exports[`renders an empty list of repairs 1`] = `
<glamorous.Div
  backgroundColor="rgba(255,255,255,.7)"
  height="100%"
>
  <EmptyRepairsList
    canAddRepairs={true}
    onAddRepair={[Function]}
  />
</glamorous.Div>
`;
